EnvoyGateway-poc/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx-class
  listeners:
    - name: http
      hostname: limit.anishs.xyz
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    # - name: https
    #   hostname: nginxdemo.anishs.xyz
    #   port: 443
    #   protocol: HTTPS
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: secure-tls
    - name: ratelimit
      hostname: limit.anishs.xyz
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: secure-tls
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: nginx-route
#   namespace: default
# spec:
#   parentRefs:
#     - name: nginx-gateway
#   hostnames:
#     - "nginxdemo.anishs.xyz"
#   rules:
#     - backendRefs:
#         - group: ""
#           kind: Service
#           name: nginx-service
#           port: 80
#       matches:
#         - path:
#             type: PathPrefix
#             value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-ratelimit
  namespace: default
spec:
  parentRefs:
  - name: nginx-gateway
  hostnames:
  - limit.anishs.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: nginx-service
      port: 80
